igt@xe_module_load@load - fail - xe/xe_query-CRITICAL: Test assertion failure function xe_query_hwconfig_new xe/xe_query-CRITICAL: Failed assertion: query.size != 0 xe/xe_query-CRITICAL: error: 0 == 0
(xe_module_load:1994) xe/xe_query-CRITICAL: Test assertion failure function xe_query_hwconfig_new, file ../lib/xe/xe_query.c:54:
(xe_module_load:1994) xe/xe_query-CRITICAL: Failed assertion: query.size != 0
(xe_module_load:1994) xe/xe_query-CRITICAL: Last errno: 2, No such file or directory
(xe_module_load:1994) xe/xe_query-CRITICAL: error: 0 == 0
Subtest load failed.
**** DEBUG ****
(xe_module_load:1994) DEBUG: Test requirement passed: !(igt_kmod_is_loaded(unwanted_drivers[i]))
(xe_module_load:1994) DEBUG: Test requirement passed: !(igt_kmod_is_loaded(unwanted_drivers[i]))
(xe_module_load:1994) drmtest-DEBUG: Force option used: Using driver xe
(xe_module_load:1994) drmtest-INFO: Opened device: /dev/dri/card0
(xe_module_load:1994) xe/xe_query-CRITICAL: Test assertion failure function xe_query_hwconfig_new, file ../lib/xe/xe_query.c:54:
(xe_module_load:1994) xe/xe_query-CRITICAL: Failed assertion: query.size != 0
(xe_module_load:1994) xe/xe_query-CRITICAL: Last errno: 2, No such file or directory
(xe_module_load:1994) xe/xe_query-CRITICAL: error: 0 == 0
(xe_module_load:1994) igt_core-INFO: Stack trace:
(xe_module_load:1994) igt_core-INFO: #0 ../lib/igt_core.c:2051 __igt_fail_assert()
(xe_module_load:1994) igt_core-INFO: #1 ../lib/xe/xe_query.c:57 xe_device_get()
(xe_module_load:1994) igt_core-INFO: #2 ../lib/drmtest.c:622 __drm_open_driver_another()
(xe_module_load:1994) igt_core-INFO: #3 ../tests/intel/xe_module_load.c:89 load_and_check_xe()```